@@ -54,6 +54,7 @@ Bug fixes
  * Image rendition / document file deletion now happens on a post_delete signal, so that files are not lost if the deletion does not proceed (Janneke Janssen)
  * "Your recent edits" list on dashboard no longer leaves out pages that another user has subsequently edited (Michael Cordover, Kees Hink, João Luiz Lorencetti)
  * ``InlinePanel`` now accepts a ``classname`` parameter as per the documentation (emg36, Matt Westcott)
+ * Disabled use of escape key to revert content of rich text fields, which could cause accidental data loss (Matt Westcott)
 
 
 Upgrade considerations
